<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/animated_gradient"
    tools:context=".activities.SignUpActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/frameLayout1"
        android:layout_marginBottom="30dp"
        android:text="SignUp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="50sp"
        />
    
    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ln1"
        android:layout_centerHorizontal="true"
        >
        
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:riv_oval="true"
            android:background="@drawable/background_imageview"
            />
        <TextView
            android:id="@+id/addImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambah_gambar"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="#AEAEAE"
            android:textStyle="bold"
            />
        
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_ln"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="20dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:textColorHint="#AEAEAE"
            android:layout_marginBottom="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/namaET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/edit_text_bg"
                android:textColorHint="#AEAEAE"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="#AEAEAE"
            android:layout_marginBottom="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/edit_text_bg"
                android:textColorHint="#AEAEAE"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kata_sandi"
            android:textColorHint="#AEAEAE"
            app:endIconMode="password_toggle"
            android:layout_marginBottom="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="16dp"
                android:background="@drawable/edit_text_bg"
                android:textColorHint="#AEAEAE"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ulangi_kata_sandi"
            android:textColorHint="#AEAEAE"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="16dp"
                android:background="@drawable/edit_text_bg"
                android:textColorHint="#AEAEAE"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ln1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        >

        <Button
            android:id="@+id/registBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:padding="12dp"
            android:backgroundTint="@color/pale_grey"
            android:text="@string/daftar"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="invisible"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:indeterminateTint="@color/darker_grey"
            />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frameLayout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sudah_punya_akun"
            android:textSize="18sp"
            android:textColor="@color/very_pale_grey"

            />
        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/very_pale_grey"
            />

    </LinearLayout>

</RelativeLayout>