<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/animated_gradient"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:id="@+id/gantiBahasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_margin="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="serif"
            android:text="@string/bahasa"
            android:textColor="@color/white"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:src="@drawable/baseline_arrow_drop_down_24"
            app:tint="@color/white" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:layout_above="@id/ln1"
        android:layout_marginBottom="50dp"
        android:text="SignIn"
        android:gravity="center"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="50sp"
        />

    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:background="@drawable/background_ln"
        android:layout_centerInParent="true"
        android:padding="20dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:hint="@string/email"
            android:textColorHint="#AEAEAE"
            android:layout_marginBottom="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:padding="16dp"
                android:background="@drawable/edit_text_bg"
                android:textColorHint="#AEAEAE"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:hint="@string/kata_sandi"
            android:textColorHint="#AEAEAE"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:inputType="textPassword"
                android:padding="16dp"
                android:background="@drawable/edit_text_bg"
                android:textColorHint="#AEAEAE"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:layout_marginTop="5dp"
            android:text="@string/lupa_kata_sandi"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/very_pale_grey"
            android:layout_gravity="end"
            />

    </LinearLayout>
    
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/ln1"
        android:animateLayoutChanges="true"
        >

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="serif"
            android:padding="12dp"
            android:backgroundTint="@color/pale_grey"
            android:text="@string/masuk"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            />
        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="invisible"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:indeterminateTint="@color/darker_grey"
            />

    </FrameLayout>



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frameLayout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/belum_punya_akun"
            android:textSize="18sp"
            android:textColor="@color/very_pale_grey"

            />
        <TextView
            android:id="@+id/textSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/signup"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/very_pale_grey"
            />

    </LinearLayout>

</RelativeLayout>